src/test/deca/context/invalid/SansObjet/DeclVar-And-int-float-float.deca
// Description:
//    Declaration of a int variable using && operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  1.5; 
    float y = 3.14; 
    int z = 1.5 && 3.14; 
}
